<resources>
    <string name="app_name">MyBuddyGym</string>
    <string name="home_workout">HOME WORKOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gym_categories">Gym Categories</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="update_password">Update Password</string>
    <string name="title">Title</string>
    <string name="update_password_error">The new password cannot be the same as the old password. Please enter a different new password</string>
    <string name="new_and_confirm_password_not_a_match">New password and confirm password do not match. Please ensure they are the same.</string>
    <string name="update_password_description">Please provide your old password, new password, and then confirm password (Retype the new password) to proceed.</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log In</string>
    <string name="create_your_account">Create your account</string>
    <string name="fill_in_your_details_to_get_started">Fill in your details to get started</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="to_access_your_account">to access your account</string>
    <string name="log_in_with_your_credentials_to_continue">Log in with your credentials to continue</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="to_create_an_account">to create an account</string>
    <string name="full_name">Full name</string>
    <string name="last_name">Last Name</string>
    <string name="login_incorrect_password">Incorrect password</string>
    <string name="login_incorrect_email">Incorrect email</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="proteins">Proteins</string>
    <string name="fats_and_oil">Fats and Oil</string>
    <string name="minerals">Minerals</string>
    <string name="vitamins">Minerals</string>
    <string name="fibre">Fibre</string>

</resources>