<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".homeScreen.views.login.fragments.LaunchScreenHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logo_purple"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/third_logo" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_tv"
            style="@style/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/create_your_account"
            android:textColor="@color/BG_red2"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_description"
            style="@style/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/fill_in_your_details_to_get_started"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_description"
        app:layout_constraintBottom_toTopOf="@id/createAnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_full_name"
                style="@style/item_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/full_name"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/BG_red2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/edit_text_unfilled_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
                app:placeholderTextAppearance="@style/MyBuddyAppSecondaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textView_full_name"
                    style="@style/item_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_email_address"
                style="@style/item_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/email_address"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/BG_red2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_layout_full_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/edit_text_unfilled_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_address"
                app:placeholderTextAppearance="@style/MyBuddyAppSecondaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textView_email_address"
                    style="@style/item_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_password"
                style="@style/item_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/BG_red2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_layout_email_address" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/edit_text_unfilled_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                app:placeholderTextAppearance="@style/MyBuddyAppSecondaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textView_password"
                    style="@style/item_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAnAccount"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/BG_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordLogin"
            style="@style/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/BG_red2"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.334"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordTvDesc"
            style="@style/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/to_access_your_account"
            android:textColor="@color/BG_brown"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/passwordLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>